crates/rome_js_formatter/tests/specs/prettier/js/bind-expressions/await.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "js\\bind-expressions\\await.js"
---

# Input

```js
const doBothThings = async () => {
    const request = doAsyncThing();
    return (await request)::doSyncThing();
};
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,4 +1,5 @@
 const doBothThings = async () => {
   const request = doAsyncThing();
-  return (await request)::doSyncThing();
+  return await request;
+  ::doSyncThing()
 };
```

# Output

```js
const doBothThings = async () => {
  const request = doAsyncThing();
  return await request;
  ::doSyncThing()
};
```


# Errors
```
await.js:3:27 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a semicolon or an implicit semicolon after a statement, but found none
  
  × An explicit or implicit semicolon is expected here...
  
    ┌─ await.js:3:27
    │
  3 │     return (await request)::doSyncThing();
    │                           ^
  
  i ...Which is required to end this statement
  
    ┌─ await.js:3:5
    │
  3 │     return (await request)::doSyncThing();
    │     ^^^^^^^^^^^^^^^^^^^^^^^
  

```


